Bug 847045 - Avoid frequent ExcludeType bailouts. r=nbp